k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kirro-mock
spec:
  selector:
    app: kirro-mock
  ports:
    - port: 8081
      targetPort: 8081
